# qt_one

./: .gitignore  AppIcon.icns  CMakeLists.txt  CMakePresets.json  main.cpp  resources.qrc
assets/web/: index.html
assets/web/assets/: index.js
crawler/: build  build.ps1  img_fetch.spec  init  init.ps1  main.py  requirements.txt
src/: DesktopGirl.cpp  DesktopGirl.h  VLayout.cpp  VLayout.h  WebBridge.h
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  qwebchannel.d.ts
web/src/components/web/: GridView.tsx
web/src/view/: Home.tsx
